# kafka-cad

./: .dockerignore  .gitignore  Cargo.toml  LICENSE.md  README.md  docker-compose-kafka.yml  docker-compose-services.yml  docker-compose.yml
.github/workflows/: build.yml  main.yml
api/: Cargo.toml  build.rs
api/src/: common.rs  main.rs
common/geom/: Cargo.toml  build.rs
common/geom/src/: lib.rs
common/id_gen/: Cargo.toml
common/id_gen/src/: lib.rs
common/math/: Cargo.toml
common/math/src/: lib.rs
common/object_state/: Cargo.toml  build.rs
common/object_state/src/: lib.rs
dependencies/: Cargo.toml  README.md  build.rs
dependencies/src/: cache.rs  kafka.rs  main.rs  tests.rs
geometry-kernel/: README.md
geometry-kernel/geom-client-rs/: Cargo.toml  build.rs
geometry-kernel/geom-client-rs/src/: lib.rs
geometry-kernel/geom-server-cxx/: CMakeLists.txt  Dockerfile
geometry-kernel/geom-server-cxx/inc/: oce_interface.hpp
geometry-kernel/geom-server-cxx/src/: geom_server.cpp  oce_interface.cpp
geometry-kernel/geom-server-cxx/tests/: tests.cpp
geometry-kernel/test-geom-server/: Cargo.toml
geometry-kernel/test-geom-server/src/: main.rs
grpc-proxy/: Dockerfile  README.md  envoy.yaml
obj_defs/walls/: Cargo.toml  build.rs
obj_defs/walls/src/: main.rs  repr.rs  wall.rs
objects/: Cargo.toml  build.rs
objects/src/: cache.rs  kafka.rs  main.rs
operations/: Cargo.toml  build.rs
operations/obj-defs/: Cargo.toml  README.md  build.rs
operations/obj-defs/src/: door.rs  geom_kernel.rs  lib.rs  sheet.rs  symbol_def.rs  symbol_instance.rs  viewport.rs  visibility_group.rs  wall.rs
operations/obj-traits/: Cargo.toml  README.md
operations/obj-traits/src/: geom.rs  lib.rs  references.rs
operations/operations-lib/: Cargo.toml  README.md
operations/operations-lib/src/: joins.rs  lib.rs  ops.rs  updates.rs
operations/operations-server/: Cargo.toml  README.md  build.rs
operations/operations-server/src/: main.rs  obj_convert.rs
operations/src/: main.rs
operations/src/obj_defs/: mod.rs  wall.rs
operations/src/obj_traits/: mod.rs  utils.rs
proto/: api.proto  dependencies.proto  geom.proto  geom_kernel.proto  obj_defs.proto  object_state.proto  objects.proto  operations.proto  rep_cache.proto  representation.proto  submit.proto  undo.proto  walls.proto
rep_cache/: Cargo.toml  build.rs
rep_cache/src/: cache.rs  kafka.rs  main.rs
representations/: Cargo.toml  build.rs
representations/src/: consume.rs  main.rs  produce.rs
submit/: Cargo.toml  build.rs
submit/src/: main.rs  produce.rs  update.rs
test_producer/: Cargo.toml  build.rs
test_producer/src/: main.rs
test_submit/: Cargo.toml  build.rs
tests/: undo_redo.py
tests/api_client/: Cargo.toml  README.md  build.rs
tests/api_client/src/: lib.rs  producer.rs  subscriber.rs
tests/test_undo_redo/: Cargo.toml
tests/test_undo_redo/src/: main.rs
trace-lib/: Cargo.toml
trace-lib/src/: lib.rs
ui/: README.md  index.ejs  index.ts  package-lock.json  package.json  tsconfig.json  webpack.config.js
ui-server/: Cargo.toml  README.md
ui-server/src/: main.rs
ui/src/operations/: operations.ts
ui/src/rendering/: fabric.min.js  renderer.ts  renderer2D.ts
ui/src/ui/: controller.ts  gui.ts  mouse_events.ts
ui/src/utils/: math.ts
undo/: Cargo.toml  build.rs
undo/src/: cache.rs  invert.rs  kafka.rs  main.rs
updates/: Cargo.toml
updates/src/: kafka.rs  main.rs
