[workspace]

members = [
    "api",
    "objects",
    "submit",
    "dependencies",
    "tests/api_client",
    "tests/test_undo_redo",
    "undo",
    "representations",
    "updates",
    "operations/obj-traits",
    "operations/obj-defs",
    "operations/operations-lib",
    "operations/operations-server",
    "ui-server",
    "trace-lib"
]