# syntax = denzp/cargo-wharf-frontend:v0.1.0-alpha.2
[package]
name = "api"
version = "0.1.0"
authors = ["Scot Wilcox <wilcox.scot@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.6"
tonic = "0.2.1"
futures = "0.3.4"
tokio = { version = "0.2", features = ["macros", "sync", "stream", "time", "test-util"] }
serde_json = "1.0.52"
trace_lib = {path = "../trace-lib"}
tracing = "0.1.14"
opentelemetry = "0.5.0"
tracing-opentelemetry = "0.4.0"

[build-dependencies]
tonic-build = "0.2.0"

[package.metadata.wharf.builder]
image = "rust:slim-buster"
setup-commands = [
  { command = ["rustup", "component", "add", "rustfmt"], display = "Install rustfmt" }
]

[[package.metadata.wharf.binary]]
name = "api"
destination = "/usr/local/bin/api"

[package.metadata.wharf.output]
image = "debian:buster-slim"
expose = ["6000"]
entrypoint = ["/usr/local/bin/api"]



