[package]
name = "test_producer"
version = "0.1.0"
authors = ["Scot Wilcox <wilcox.scot@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.6"
tonic = "0.1.1"
tokio = { version = "0.2", features = ["macros", "sync", "stream", "time", "test-util"] }
uuid = {version = "0.8.1", features = ["v4"]}

[build-dependencies]
tonic-build = "0.1.1"