[package]
name = "trace_lib"
version = "0.1.0"
authors = ["Scot Wilcox <wilcox.scot@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opentelemetry = "0.5.0"
tracing = "0.1.14"
tracing-subscriber = "0.2.5"
tracing-opentelemetry = "0.4.0"
opentelemetry-jaeger = "0.4"
tonic = "0.2.1"
