[package]
name = "geom"
version = "0.1.0"
authors = ["Scot Wilcox <wilcox.scot@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.6"
serde_json = "1.0.52"

[build-dependencies]
prost-build = "0.6"
