# syntax = denzp/cargo-wharf-frontend:v0.1.0-alpha.2
[package]
name = "walls"
version = "0.1.0"
authors = ["Scot Wilcox <wilcox.scot@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.6"
tonic = "0.1.1"
log = "0.4.8"
env_logger = "0.7.1"
actix-web = "2.0.0"
actix-protobuf = "0.5.1"
actix-rt = "1.0.0"

[build-dependencies]
prost-build = "0.6"

[package.metadata.wharf.builder]
image = "rust:slim-buster"

[[package.metadata.wharf.binary]]
name = "walls"
destination = "/usr/local/bin/walls"

[package.metadata.wharf.output]
image = "debian:buster-slim"
expose = ["6000"]
entrypoint = ["/usr/local/bin/walls"]



