# syntax = denzp/cargo-wharf-frontend:v0.1.0-alpha.2
[package]
name = "walls"
version = "0.1.0"
authors = ["Scot Wilcox <wilcox.scot@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.6"
log = "0.4.8"
env_logger = "0.7.1"
tonic = "0.1.1"
futures = "0.3.4"
tokio = { version = "0.2", features = ["macros", "sync", "stream", "time", "test-util"] }
math = { path = "../../common/math" }
object_state = {path = "../../common/object_state"}
geom = {path = "../../common/geom"}
serde_json = "1.0.52"
serde = {version = "1.0.104", features = ["derive"]}

[build-dependencies]
tonic-build = "0.1.1"

[package.metadata.wharf.builder]
image = "rust:slim-buster"
setup-commands = [
  { command = ["rustup", "component", "add", "rustfmt"], display = "Install rustfmt" }
]

[[package.metadata.wharf.binary]]
name = "walls"
destination = "/usr/local/bin/walls"

[package.metadata.wharf.output]
image = "debian:buster-slim"
expose = ["6000"]
entrypoint = ["/usr/local/bin/walls"]



