[package]
name = "obj_defs"
version = "0.1.0"
authors = ["SWilcox"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
obj_traits = {path = "../obj-traits"}
serde = {version = "1.0.104", features = ["derive"]}
serde_json = "1.0.45"
prost = "0.6"
tonic = "0.3.1"
trace_lib = {path = "../../trace-lib"}
tracing = "0.1.14"
tracing-futures = "0.2.4"

[build-dependencies]
tonic-build = "0.2"