[package]
name = "obj_traits"
version = "0.1.0"
authors = ["SWilcox"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.6"
serde = {version = "1.0.104", features = ["derive"]}
serde_json = "1.0.45"
uuid = {version = "0.8.1", features = ["serde", "v4"]}
thiserror = "1.0.9"
bincode = "1.2.1"
cgmath = {version = "0.17.0", features = ["serde"]}
typetag = "0.1"
downcast-rs = "1.1.1"
async-trait = "0.1.24"
tonic = "0.3.1"
enum-iterator = "0.6.0"
bitflags = "1.2.1"
