# syntax = denzp/cargo-wharf-frontend:v0.1.0-alpha.2
[package]
name = "operations_server"
version = "0.1.0"
authors = ["SWilcox"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
operations = {path = "../operations-lib"}
tonic = "0.3.1"
prost = "0.6"
futures = "0.3.4"
tokio = { version = "0.2", features = ["macros", "sync", "stream", "time"] }
async-stream = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.2.1"
structopt = "0.3.9"
trace_lib = {path = "../../trace-lib"}
tracing = "0.1.14"
tracing-futures = "0.2.4"

[build-dependencies]
tonic-build = "0.2"

[package.metadata.wharf.builder]
image = "rust:slim-buster"
setup-commands = [
  { command = ["rustup", "component", "add", "rustfmt"], display = "Install rustfmt" },
]

[[package.metadata.wharf.binary]]
name = "operations_server"
destination = "/usr/local/bin/operations_server"

[package.metadata.wharf.output]
image = "debian:buster-slim"
expose = ["6000"]
entrypoint = ["/usr/local/bin/operations_server"]