[package]
name = "api_client"
version = "0.1.0"
authors = ["SWilcox"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.3.1"
prost = "0.6"
futures-core = "0.3"
futures-util = "0.3"
anyhow = "1.0.26"
log = "0.4.8"
tungstenite = "0.10.1"
tokio-tungstenite = "0.10.1"
url = "2.1.0"
http = "0.2.1"

[build-dependencies]
tonic-build = "0.2.0"